# panda_ros_interface

./: README.md
panda_gazebo_controller/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
panda_gazebo_controller/config/: gazebo_ros_control.yaml  moveit_ros_control.yaml  moveit_ros_control_gripper.yaml  position_joint_trajectory_controllers.yaml
panda_gazebo_controller/launch/: load_controllers.launch.xml  load_position_joint_trajectory_controllers.launch.xml
panda_interface/: CMakeLists.txt  package.xml  setup.py
panda_interface/include/panda_interface/: franka_state_controller.h
panda_interface/launch/: franka_control.launch  panda_gazebo_interface.launch  panda_interface.launch  realsense.launch  robot_bringup.launch  start_world.launch.xml
panda_interface/scripts/: gripper_action.py  move_neutral.py  test_arm.py  test_cartesian_pose_impedance.py  test_cartesian_velocity.py
panda_interface/src/panda_interface/: arm.py  collision_behaviour_interface.py  gripper.py  joint_trajectory_action_client.py  move_group_interface.py
panda_interface/src/panda_interface.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
panda_interface/src/panda_interface/utils/: general_utils.py  ros_utils.py  transform_utils.py
panda_ros_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml  setup.py
panda_ros_controllers/cfg/: compliance_full_param.cfg  compliance_param.cfg  desired_mass_param.cfg  gravity_compensation_param.cfg  minimal_compliance_param.cfg
panda_ros_controllers/config/: cartesian_pose_impedance_additional_params.yaml  franka_control_node.yaml  franka_controllers.yaml  pose_impedance_control_additional_params.yaml
panda_ros_controllers/include/panda_ros_controllers/: cartesian_pose_impedance_controller.h  cartesian_velocity_controller.h  pseudo_inversion.h
panda_ros_controllers/src/: cartesian_pose_impedance_controller.cpp  cartesian_velocity_controller.cpp
panda_ros_interface/: CMakeLists.txt  package.xml
