<?xml version="1.0"?>
<package format="2">
  <name>panda_ros_controllers</name>
  <version>0.0.0</version>
  <description>The panda_ros_controllers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jyamada@todo.todo">jyamada</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>franka_hw</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>

  <build_depend>message_runtime</build_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>franka_hw</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
</package>
